[package]
name = "native-tls"
version = "0.1.4"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A wrapper over a platform's native TLS implementation"
repository = "https://github.com/sfackler/rust-native-tls"
documentation = "https://docs.rs/native-tls/0.1.4/native_tls"
readme = "README.md"

[dependencies]
lazy_static = "0.2"
openssl = "0.9.20"
